fix(log): 시리얼 취득에 /proc/cmdline + getprop 덤프 진단 추가
getprop exec 가 빈 값을 반환한 단말 대응. androidboot.serialno 를 /proc/cmdline
에서 파일 읽기로 취득(권한/exec/hidden-API 불필요, ADB serial 과 동일)하는 경로를
최우선으로 추가. getprop 은 PATH 기반 + 예외 로깅으로 강화하고, 실패 시 getprop
전체에서 serial 관련 항목을 전부 덤프해 실제 키를 확정할 수 있게 함.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>